의존관계 자동 주입 - 롬복과 최신 트랜드  - @Getter  - @Setter  - @ToString  - @RequiredArgsConstructor
 * 롬복이 자바의 애너테이션 프로세서 기능을 이용해 컴파일 시점에 코드를 자동으로 생성해준다.

 > settings
  > plugin
   > install lombok plugin
  > annotation processor
   > check enable annotation processing

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -15,6 +15,15 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
+
+    //start to add lombok
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
+
+    testCompileOnly 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
+    //end to add lombok
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
