--- a/core/build.gradle
+++ b/core/build.gradle
@@ -15,6 +15,7 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'javax.inject:javax.inject:1'
 
     //start to add lombok
     compileOnly 'org.projectlombok:lombok'
